--- a/page_analyzer/templates/show_url.html
+++ b/page_analyzer/templates/show_url.html
@@ -1,28 +1,49 @@
 <!doctype html>
 <html lang="ru">
-  <head>
+<head>
     <meta charset="utf-8">
     <title>Информация об адресе</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  </head>
-  <body>
-    <div class="container py-5">
-      <h1>Информация об адресе</h1>
-      <table class="table" data-test="url">
-        <tr>
-          <th>ID</th>
-          <td>{{ url[0] }}</td>
-        </tr>
-        <tr>
-          <th>URL</th>
-          <td>{{ url[1] }}</td>
-        </tr>
-        <tr>
-          <th>Дата добавления</th>
-          <td>{{ url[2] }}</td>
-        </tr>
-      </table>
-      <a href="{{ url_for('urls') }}">Назад к списку</a>
+</head>
+<body>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container">
+        <a class="navbar-brand" href="{{ url_for('index') }}">Анализатор страниц</a>
+        <div class="collapse navbar-collapse">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ url_for('urls') }}">Сайты</a>
+                </li>
+            </ul>
+        </div>
     </div>
-  </body>
+</nav>
+
+<main class="flex-grow-1">
+    <div class="container my-4">
+        <h1 class="mb-4">Информация об адресе</h1>
+
+        <table class="table table-bordered table-hover table-sm align-middle" data-test="url">
+            <tbody>
+                <tr>
+                    <th scope="row">ID</th>
+                    <td>{{ url[0] }}</td>
+                </tr>
+                <tr>
+                    <th scope="row">URL</th>
+                    <td><a href="{{ url[1] }}" target="_blank">{{ url[1] }}</a></td>
+                </tr>
+                <tr>
+                    <th scope="row">Дата добавления</th>
+                    <td>{{ url[2] }}</td>
+                </tr>
+            </tbody>
+        </table>
+
+        <a href="{{ url_for('urls') }}" class="btn btn-outline-primary">Назад к списку</a>
+    </div>
+</main>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+</body>
 </html>
