--- a/page_analyzer/templates/show_url.html
+++ b/page_analyzer/templates/show_url.html
@@ -23,6 +23,15 @@
     <div class="container my-4">
         <h1 class="mb-4">Информация об адресе</h1>
 
+        {% with messages = get_flashed_messages(with_categories=true) %}
+            {% if messages %}
+                <div class="mt-3">
+                {% for category, message in messages %}
+                    <div class="alert alert-{{ category }}">{{ message }}</div>
+                {% endfor %}
+                </div>
+            {% endif %}
+        {% endwith %}
         <!-- Инфо о сайте -->
         <table class="table table-bordered table-hover table-sm align-middle" data-test="url">
             <tbody>
@@ -64,10 +73,10 @@
                     {% for check in checks %}
                         <tr>
                             <td>{{ check[0] }}</td>
-                            <td>{{ check[1] or '' }}</td>
-                            <td>{{ check[2] or '' }}</td>
-                            <td>{{ check[3] or '' }}</td>
-                            <td>{{ check[4] or '' }}</td>
+                            <td>{{ check[1] if check[1] else '' }}</td>
+                            <td>{{ check[2] if check[2] else '' }}</td>
+                            <td>{{ check[3] if check[3] else '' }}</td>
+                            <td>{{ check[4] if check[4] else '' }}</td>
                             <td>{{ check[5] }}</td>
                         </tr>
                     {% endfor %}
