--- a/page_analyzer/templates/show_url.html
+++ b/page_analyzer/templates/show_url.html
@@ -45,7 +45,7 @@
                 </tr>
                 <tr>
                     <th scope="row">Дата добавления</th>
-                    <td>{{ url[2] }}</td>
+                    <td>{{ url[2].strftime('%d.%m.%Y') if url[2] else '' }}</td>
                 </tr>
             </tbody>
         </table>
@@ -77,7 +77,7 @@
                             <td>{{ check[2] if check[2] else '' }}</td>
                             <td>{{ check[3] if check[3] else '' }}</td>
                             <td>{{ check[4] if check[4] else '' }}</td>
-                            <td>{{ check[5] }}</td>
+                            <td>{{ check[5].strftime('%d.%m.%Y') if check[5] else '' }}</td>
                         </tr>
                     {% endfor %}
                 {% else %}
