--- a/page_analyzer/templates/index.html
+++ b/page_analyzer/templates/index.html
@@ -65,7 +65,7 @@
                   >
                 </div>
                 <div class="col-12 col-md-4">
-                  <button type="submit" class="btn btn-primary btn-lg w-100">Проверить</button>
+                  <input type="submit" class="btn btn-primary btn-lg w-100" value="Проверить">
                 </div>
               </form>
             </div>
