--- a/page_analyzer/templates/show_url.html
+++ b/page_analyzer/templates/show_url.html
@@ -40,11 +40,11 @@
                     <td>{{ url[0] }}</td>
                 </tr>
                 <tr>
-                    <th scope="row">URL</th>
+                    <th scope="row">Имя</th>
                     <td><a href="{{ url[1] }}" target="_blank">{{ url[1] }}</a></td>
                 </tr>
                 <tr>
-                    <th scope="row">Дата добавления</th>
+                    <th scope="row">Дата создания</th>
                     <td>{{ url[2].strftime('%d.%m.%Y') if url[2] else '' }}</td>
                 </tr>
             </tbody>
