--- a/page_analyzer/templates/urls.html
+++ b/page_analyzer/templates/urls.html
@@ -34,12 +34,12 @@
         {% endif %}
         {% endwith %}
 
-        <table class="table table-bordered table-hover table-sm align-middle">
+        <table class="table table-bordered table-hover table-sm align-middle" data-test="urls">
             <thead class="table-light">
                 <tr>
                     <th scope="col">ID</th>
-                    <th scope="col">Сайт</th>
-                    <th scope="col">Дата последней проверки</th>
+                    <th scope="col">Имя</th>
+                    <th scope="col">Последняя проверка</th>
                     <th scope="col">Код ответа</th>
                 </tr>
             </thead>
