--- a/page_analyzer/templates/index.html
+++ b/page_analyzer/templates/index.html
@@ -19,7 +19,7 @@
       <div class="collapse navbar-collapse" id="navbarMain">
         <ul class="navbar-nav ms-3">
           <li class="nav-item">
-            <a class="nav-link" href="{{ url_for('urls') }}">Сайты</a>
+            <a class="nav-link" href="{{ url_for('urls_index') }}">Сайты</a>
           </li>
         </ul>
       </div>
