--- a/page_analyzer/templates/show_url.html
+++ b/page_analyzer/templates/show_url.html
@@ -12,7 +12,7 @@
         <div class="collapse navbar-collapse">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link" href="{{ url_for('urls') }}">Сайты</a>
+                    <a class="nav-link" href="{{ url_for('urls_index') }}">Сайты</a>
                 </li>
             </ul>
         </div>
@@ -88,7 +88,7 @@
             </tbody>
         </table>
 
-        <a href="{{ url_for('urls') }}" class="btn btn-outline-primary">Назад к списку</a>
+        <a href="{{ url_for('urls_index') }}" class="btn btn-outline-primary">Назад к списку</a>
     </div>
 </main>
 
