--- a/page_analyzer/templates/urls.html
+++ b/page_analyzer/templates/urls.html
@@ -12,7 +12,7 @@
         <div class="collapse navbar-collapse">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" href="{{ url_for('urls') }}">Сайты</a>
+                    <a class="nav-link" href="{{ url_for('urls_index') }}">Сайты</a>
                 </li>
             </ul>
         </div>
